<resources>
    <string name="app_name">BookNook</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_nook_word">Book Nook</string>
    <string name="email_word">Email</string>
    <string name="password_word">Password</string>
    <string name="login_word">Login</string>
    <string name="create_account_text">Create Account</string>
    <string name="new_user_text">New User?</string>
    <string name="welcome_text">Welcome,</string>
    <string name="email_username_text">User</string>
    <string name="exclamation_symbol">!</string>
    <string name="instructions_text">Instructions</string>
    <string name="instructions_paragraph">\t\t\t Welcome to Book Nook! Inside you\'ll be able to keep a library of any book you wish. Whether you want to read, are currently reading, or already read, keep all of them here in your own little nook!</string>
    <string name="books_list">Books</string>
    <string name="book_add_description">Add a book fab</string>
    <string name="logout">Logout</string>
    <string name="login_label">Login</string>
    <string name="welcome_label">Welcome</string>
    <string name="instructions_label">Instructions</string>
    <string name="book_list_label">Book List</string>
    <string name="add_a_book">Add A Book:</string>
    <string name="book_name_text">Name:</string>
    <string name="book_author_text">Author:</string>
    <string name="book_pages_text"># of pages:</string>
    <string name="book_description_text">Description:</string>
    <string name="save_book">Save Book</string>
    <string name="cancel">Cancel</string>
    <string name="add_book_label">Add A Book</string>
    <string name="name_text">Name</string>
    <string name="author_text">Author</string>
    <string name="description_text">Description of the book here</string>
    <string name="book_page">1643</string>
</resources>
