<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".welcome.WelcomeFragment">


        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32999998"
            android:textSize="30dp"
            android:padding="3dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="80dp" />

        <TextView
            android:id="@+id/email_username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_username_text"
            app:layout_constraintStart_toStartOf="@+id/welcome_text"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text"
            android:textSize="30dp"
            android:padding="3dp"
            />

        <TextView
            android:id="@+id/exclamation_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exclamation_symbol"
            android:textSize="30dp"
            app:layout_constraintStart_toEndOf="@+id/email_username_text"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text"
            android:padding="3dp"/>

        <Button
            android:id="@+id/instructions_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:text="@string/instructions_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>