<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--ConstraintLayout was used here since this login page will be updated in the future to allow other forms of login options  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginFragment">


        <TextView
            android:id="@+id/book_nook_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/book_nook_word"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.231" />

        <TextView
            android:id="@+id/email_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/email_word"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/username_edit"
            app:layout_constraintTop_toBottomOf="@+id/book_nook_word" />

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_word" />

        <TextView
            android:id="@+id/password_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password_word"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/password_edit"
            app:layout_constraintTop_toBottomOf="@+id/username_edit" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_word" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="60dp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="12"
            android:text="@string/login_word"
            app:layout_constraintEnd_toEndOf="@+id/password_edit"
            app:layout_constraintStart_toStartOf="@+id/password_edit"
            app:layout_constraintTop_toBottomOf="@+id/password_edit" />

        <Button
            android:id="@+id/create_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/create_account_text"
            android:ems="12"
            app:layout_constraintEnd_toEndOf="@+id/login_btn"
            app:layout_constraintStart_toStartOf="@+id/login_btn"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />

        <TextView
            android:id="@+id/new_user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_text"
            app:layout_constraintBottom_toTopOf="@+id/create_account_btn"
            app:layout_constraintStart_toStartOf="@+id/create_account_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>