<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Constraint Layout was used here for possible future complicating of this screen -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".instructions.InstructionsFragment">


        <TextView
            android:id="@+id/book_nook_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal"
            android:text="@string/book_nook_word"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.231" />


        <TextView
            android:id="@+id/instructions_para"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:lineSpacingExtra="24sp"
            android:padding="5dp"
            android:text="@string/instructions_paragraph"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_nook_word"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintWidth_max="wrap"
            app:layout_constraintWidth_percent="0.75" />

        <Button
            android:id="@+id/books_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/books_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/instructions_para"
            app:layout_constraintTop_toBottomOf="@+id/instructions_para" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>