<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".books.BookDetailFragment">

    <data>
        <variable
            name="viewModel"
            type="com.lopezalex.booknook.viewmodel.BookViewModel"/>
    </data>
    <!--Constraint layout was used here for now. Reason for this is I plan to expand this layout further in the future to allow for many more inputs from the user and it might be easier with constraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/add_a_book_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_a_book"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16000003" />

        <EditText
            android:id="@+id/book_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:text="@={viewModel.name}"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_name_text" />

        <EditText
            android:id="@+id/book_author_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:text="@={viewModel.author}"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_author_text" />
        <EditText
            android:id="@+id/book_pages_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:text="@={viewModel.pages}"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_pages_text" />

        <EditText
            android:id="@+id/book_description_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:text="@={viewModel.description}"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_description_text" />


        <TextView
            android:id="@+id/book_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/book_name_text"
            app:layout_constraintStart_toStartOf="@+id/book_name_edit"
            app:layout_constraintTop_toBottomOf="@+id/add_a_book_text" />

        <TextView
            android:id="@+id/book_author_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/book_author_text"
            app:layout_constraintStart_toStartOf="@+id/book_author_edit"
            app:layout_constraintTop_toBottomOf="@+id/book_name_edit" />

        <TextView
            android:id="@+id/book_pages_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/book_pages_text"
            app:layout_constraintStart_toStartOf="@+id/book_pages_edit"
            app:layout_constraintTop_toBottomOf="@+id/book_author_edit" />

        <TextView
            android:id="@+id/book_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/book_description_text"
            app:layout_constraintStart_toStartOf="@+id/book_description_edit"
            app:layout_constraintTop_toBottomOf="@+id/book_pages_edit" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/btnColor"
            android:text="@string/save_book"
            app:layout_constraintStart_toStartOf="@+id/book_description_edit"
            app:layout_constraintTop_toBottomOf="@+id/book_description_edit"
            android:ems="9" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@android:string/cancel"
            app:layout_constraintEnd_toEndOf="@+id/book_description_edit"
            app:layout_constraintTop_toBottomOf="@+id/book_description_edit" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>